# canis

./: CMakeLists.txt  Canis.sln  Canis.workspace  ProjectHome.md
CMakeModules/: FindAssimp.cmake
Canis/: CMakeLists.txt
Canis/include/: AssimpLoader.h  AxisAlignedBox.h  CSXLoader.h  Camera.h  Canis.h  Common.h  DIFLoader.h  DXSLoader.h  DynamicLibrary.h  Engine.h  EntityManager.h  FramebufferObject.h  GlShader.h  GlShaderManager.h  IEntity.h  IEntityFactory.h  IObject.h  IPlugin.h  IScriptProvider.h  IXmlLoader.h  LW14Loader.h  Light.h  Material.h  MaterialLoader.h  MaterialManager.h  Mesh.h  MeshManager.h  MotionState.h  PluginManager.h  ProgramLoader.h  Prop.h  PropFactory.h  PythonProvider.h  RenderGroup.h  RenderManager.h  RenderTarget.h  Renderable.h  Renderer.h  Scene.h  SceneLoader.h  (+14 more)
Canis/include/python/: python_canis.h
Canis/src/: AssimpLoader.cpp  AxisAlignedBox.cpp  CSXLoader.cpp  Camera.cpp  DIFLoader.cpp  DXSLoader.cpp  DllMain.cpp  DynamicLibrary.cpp  Engine.cpp  EntityManager.cpp  FramebufferObject.cpp  GlShader.cpp  GlShaderManager.cpp  LW14Loader.cpp  Light.cpp  Material.cpp  MaterialLoader.cpp  MaterialManager.cpp  Mesh.cpp  MeshManager.cpp  MotionState.cpp  PluginManager.cpp  ProgramLoader.cpp  Prop.cpp  PropFactory.cpp  PythonProvider.cpp  RenderGroup.cpp  RenderManager.cpp  RenderTarget.cpp  Renderable.cpp  Renderer.cpp  Scene.cpp  SceneLoader.cpp  SceneNode.cpp  SceneWriter.cpp  Script.cpp  ScriptManager.cpp  SkyBox.cpp  StaticMesh.cpp  StaticMeshFactory.cpp  (+5 more)
Canis/src/SOIL/: SOIL.c
SceneEditor/: CMakeLists.txt  SceneEditor.cbp  SceneEditor.depend  SceneEditor.vcxproj  SceneEditor.vcxproj.filters
SceneEditor/include/: AboutWindow.h  AddEntityDialog.h  AddLightDialog.h  AddNodeDialog.h  Common.h  EntityDialogManager.h  GL3Widget.h  IEntityDialog.h  IEntityDialogFactory.h  MainWindow.h  PropDialog.h  PropDialogFactory.h  StaticMeshDialog.h  StaticMeshDialogFactory.h  Viewport.h  color_wheel.h
SceneEditor/include/PropertyBrowser/: ColorProperty.h  FileProperty.h  IProperty.h  Mat4Property.h  PropertyBrowser.h  StringProperty.h
SceneEditor/res/: MainWindow.qrc
SceneEditor/src/: AboutWindow.cpp  AddEntityDialog.cpp  AddLightDialog.cpp  AddNodeDialog.cpp  EntityDialogManager.cpp  GL3Widget.cpp  MainWindow.cpp  PropDialog.cpp  PropDialogFactory.cpp  StaticMeshDialog.cpp  StaticMeshDialogFactory.cpp  Viewport.cpp  color_wheel.cpp  main.cpp
SceneEditor/src/PropertyBrowser/: ColorProperty.cpp  FileProperty.cpp  Mat4Property.cpp  PropertyBrowser.cpp  StringProperty.cpp
SceneEditor/ui/: AboutWindow.ui  AddEntityDialog.ui  AddLightDialog.ui  AddNodeDialog.ui  MainWindow.ui
Viewer/: CanisViewer.cpp  CanisViewer.h  Viewer.cbp  Viewer.depend  Viewer.vcxproj  Viewer.vcxproj.filters
